增加对话题最新部分消息的缓存